--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,17 @@
-h1, h2 {
+h1 {
     color: #004466;
     font-family: "Rubik Bubbles", system-ui;
+    font-size: 40px;
+    font-weight: 400;
+    font-style: normal;
+}
+
+h2 {
+    color: #004466;
+    font-family: "Rubik Bubbles", system-ui;
+    font-size: 30px;
+    font-weight: 400;
+    font-style: normal;
 }
 
 body {
@@ -8,5 +19,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #83e2ff;
+    background-color: #abebff;
+}
+
+canvas {
+    border: solid 5px #004466;
 }
