--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,14 @@ h2 {
     font-style: normal;
 }
 
+h4 {
+    color: #004466;
+    font-family: "Rubik Bubbles", system-ui;
+    font-size: 20px;
+    font-weight: 400;
+    font-style: normal;
+}
+
 body {
     display: flex;
     flex-direction: column;
