setting up exit cut scene

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,22 @@ body {
     background-color: #abebff;
 }
 
+.main {
+    display: inline-block;
+    position: relative;
+}
+
+.cut-scene {
+    background-color: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    pointer-events: none;
+}
+
 canvas {
     border: solid 5px #004466;
 }
